--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -5,9 +5,16 @@
   files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
   entry: cpplint
 - id: cppcheck
-  name: Static analysis of C/C++ code
+  name: static analyzer of C/C++ code
   description: Run cppcheck against C/C++ source files
   language: system
   files: \.(c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
   entry: cppcheck
   args: ["--error-exitcode=1"]
+- id: clang-format
+  name: formatter of C/C++ code based on a style guide: Google, LLVM, Mozilla, Webkit, and Chromium available
+  description: Run clang-format against C/C++ header and source files
+  language: system
+  files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
+  entry: clang-format
+  args: ["-style=Google"]
