--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,5 +1,12 @@
+- id: clang-format
+  name: formatter of C/C++ code based on a style guide: Google, LLVM, Mozilla, Webkit, and Chromium available
+  description: Run clang-format against C/C++ header and source files
+  language: system
+  files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
+  entry: clang-format
+  args: ["-style=Google"]
 - id: cpplint
-  name: Compliance with Google C++ Style Guide
+  name: linter (or style-error checker) for Google C++ Style Guide
   description: Run cpplint against C/C++ header and source files
   language: python
   files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
@@ -11,10 +18,3 @@
   files: \.(c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
   entry: cppcheck
   args: ["--error-exitcode=1"]
-- id: clang-format
-  name: formatter of C/C++ code based on a style guide: Google, LLVM, Mozilla, Webkit, and Chromium available
-  description: Run clang-format against C/C++ header and source files
-  language: system
-  files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
-  entry: clang-format
-  args: ["-style=Google"]
