--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,7 +3,7 @@
   description: Run clang-format against C/C++ header and source files
   language: system
   files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
-  entry: clang-format
+  entry: clang-format -i
 - id: cpplint
   name: linter for Google C++ Style Guide
   description: Run cpplint against C/C++ header and source files
@@ -15,5 +15,4 @@
   description: Run cppcheck against C/C++ source files
   language: system
   files: \.(c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
-  entry: cppcheck
-  args: ["--error-exitcode=1"]
+  entry: cppcheck --error-exitcode=1
