--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,6 +4,7 @@
   language: system
   files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
   entry: clang-format -i
+  args: ["-style=Google"]
 - id: cpplint
   name: linter for Google C++ Style Guide
   description: Run cpplint against C/C++ header and source files
